--- a/preliminaryTests/encryptionDemo.ipynb
+++ b/preliminaryTests/encryptionDemo.ipynb
@@ -21,7 +21,10 @@
     },
     "colab": {
       "name": "encryptionDemo.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "machine_shape": "hm"
     },
     "accelerator": "GPU"
   },
@@ -47,15 +50,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4ytipLIpqxsV"
+        "id": "4ytipLIpqxsV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4bf0cab3-3acc-4f9c-9f9e-4c1b04396633"
       },
       "source": [
         "!pip install -q git+https://github.com/huggingface/transformers.git\n",
         "from encryptSecret import *\n",
-        "from decryptSecret import *"
+        "from decryptSecret import *\n",
+        "from createModel import buildModelGPT"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for transformers (PEP 517) ... \u001b[?25l\u001b[?25hdone\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -76,7 +95,7 @@
         "precondSec=\"Secret: \"\n",
         "secret=\"This is highly secret!\""
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -95,18 +114,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zEBJ-w2qxsX",
-        "outputId": "332c1c91-ee1d-4c31-a771-4f95fb9db3ba"
+        "outputId": "e65dbeee-d56f-4e27-bb5a-6ecd31fbdc7e"
       },
       "source": [
-        "outText, outInd=encryptMessage(secret, precondSec, startOfText)\n",
+        "mod, tok=buildModelGPT()\n",
+        "outText, outInd=encryptMessage(mod, tok, secret, precondSec, startOfText)\n",
         "print(outText)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "This year's Shakespeare Festival Featured Film! Take advantage\n"
+            "This year's Shakespeare Festival wins the heart\n",
+            "-\n"
           ],
           "name": "stdout"
         }
@@ -128,13 +149,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xjIpftyGqxsX",
-        "outputId": "49d2d94d-3315-4685-e077-de331b9a6da1"
+        "outputId": "dbae272e-884b-4fc3-dde5-417183d6711e"
       },
       "source": [
-        "secretText=getTextFromText(outText, precondSec, startOfText)\n",
+        "secretText=getTextFromText(mod, tok, outText, precondSec, startOfText)\n",
         "print(secretText)"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,6 +165,41 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWnhti7HyNlr",
+        "outputId": "95b50abd-cb8d-42af-c115-ffdc483740d6"
+      },
+      "source": [
+        "secretText2=getTextFromInd(mod, tok, outInd, precondSec, startOfText)\n",
+        "print(secretText2)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Secret: This is highly secret!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q3x0PbfQygQK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
