--- a/DemoStego.ipynb
+++ b/DemoStego.ipynb
@@ -19,10 +19,9 @@
         "id": "IIBQWSvYVmjP"
       },
       "source": [
-        "## downloads things from google colab\n",
-        "!pip install transformers\n",
-        "!pip install datasets\n",
-        "\n"
+        "from wrappedCode.createModel import *\n",
+        "from wrappedCode.encryptionWrapped import *\n",
+        "from wrappedCode.evaluationModelHelpers import *"
       ],
       "execution_count": null,
       "outputs": []
